--- a/index.html
+++ b/index.html
@@ -207,7 +207,23 @@
                             </div>
                             <span>Email: skeet@pobox.com (but please read my blog post on Stack Overflow-related emails first)</span>
                         </div>
+                        <div class="cm2">
+                            <div class="cm2-title">
+                                <span>Badges</span>
+                            </div>
+                            <div class="cc">
+                                <div class="cc-title">
+                                    <img src="images/gold-icon (1).jpeg" alt="">
+                                    <div class="cc-title2">
+                                        <span>824</span>
+                                        <p>gold badges</p>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
                     </div>
+                    <!--about bar end-->
                 </div>
             </div>
             <!--main content end-->
