--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User Jon Skeet -Stack Overflow </title>
     <link rel="icon" type="image/x-icon" href="images/black-bg-icon.png">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="assets/icon.css">
     <link rel="stylesheet" href="assets/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css2.css" />
+    <link rel="stylesheet" href="assets/css2.css" >
 </head>
 <body>
     <div class="container">
@@ -43,7 +43,9 @@
                         <li>Home</li>
                         <li>PUBLIC</li>
                     </ol>
-                    <li><span id="earth-icon" class="material-symbols-outlined">public</span> Questions</li>
+		 	<ol>
+                    		<li><span id="earth-icon" class="material-symbols-outlined">public</span> Questions</li>
+			</ol>
                      <div class="sub-sb1">
                         <ol>
                             <li>Tags</li>
@@ -681,18 +683,23 @@
                 </div>
             
             <div class="col-2">
+		<ul>
                 <li class="main-f"><a href="#">STACK OVERFLOW</a></li>
                 <li class="row"><a href="#">Questions</a></li>
-                <li class="row"><a href="#">Help</a></li>      
+                <li class="row"><a href="#">Help</a></li>   
+		</ul>   
             </div>
             <div class="col-3">
+		<ul>
                 <li class="main-f"><a href="#">PRODUCTS</a></li>
                 <li class="row"><a href="#">Teams</a></li>
                 <li class="row"><a href="#">Advertising</a></li>
                 <li class="row"><a href="#">Collectives</a></li>
                 <li class="row"><a href="#">Talent</a></li>
+		</ul>
             </div>
             <div class="col-4">
+		<ul>
                 <li class="main-f"><a href="#">COMPANY</a></li>
                 <li class="row"><a href="#">About</a></li>
                 <li class="row"><a href="#">Press</a></li>
@@ -703,8 +710,10 @@
                 <li class="row"><a href="#">Contact Us</a></li>
                 <li class="row"><a href="#">Cookie Settings</a></li>
                 <li class="row"><a href="#">Cookie Policy</a></li>
+		</ul>
             </div>
             <div class="col-5">
+		<ul>
                 <li class="main-f"><a href="#">STACK EXCHANGE NETWORK</a></li>
                 <li class="row"><a href="#">Technology</a></li>
                 <li class="row"><a href="#">Culture & recreation</a></li>
@@ -715,6 +724,7 @@
 		<li class="row"><a href="#"></a></li>
                 <li class="row"><a href="#">API</a></li>
                 <li class="row"><a href="#">Data</a></li>
+		</ul>
             </div>
              <div class="col-6">
                 <a href="#">Blog</a>
@@ -729,7 +739,6 @@
     <!--container end-->
 </body>
 </html>
-
 
 
 
